minecraft/ingressTcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: minecraft-game
  namespace: default
spec:
  entryPoints:
    - mqtt
  routes:
  - match: HostSNI(`minecraft.$DOMAIN_NAME`)
    services:
    - name: game
      port: 25565
      nativeLB: true
  tls:
    secretName: tls-certificate
    passthrough: false
    domains:
      - main: $DOMAIN_NAME
        sans:
          - "*.$DOMAIN_NAME"
          - mqtt.$DOMAIN_NAME
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: minecraft-rcon
  namespace: default
spec:
  entryPoints:
    - mqtt
  routes:
  - match: HostSNI(`*`)
    services:
    - name: rcon
      port: 25575
      nativeLB: true
